--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "id": "56adc67e-af24-45e2-b565-cef4e00c8b4d",
-  "name": "NAVSPC-AVD",
+  "name": "NAVSPC-AVD - 1.0.0.4",
   "publisher": "NAVSpecialist ApS",
-  "version": "1.0.0.2",  
+  "version": "1.0.0.4",  
   "brief": "NAVSPC AVD",
   "description": "System features for AV Distribution",
   "privacyStatement": "",
