--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "id": "56adc67e-af24-45e2-b565-cef4e00c8b4d",
-  "name": "NAVSPC-AVD - 1.2023.5.2",
+  "name": "NAVSPC-AVD - 1.2023.5.4",
   "publisher": "NAVSpecialist ApS",
-  "version": "1.2023.5.2",  
+  "version": "1.2023.5.4",  
   "brief": "NAVSPC AVD",
   "description": "System features for AV Distribution",
   "privacyStatement": "",
@@ -12,7 +12,8 @@
   "logo": "NAVSPC_ExtensionLogo.png",
   "dependencies": [],
   "screenshots": [],
-  "platform": "1.0.0.0",
+  "target": "Cloud",
+  "platform": "21.0.0.0",
   "application": "21.0.0.0",
   "idRanges": [
     {
@@ -25,7 +26,7 @@
     "allowDownloadingSource": true,
     "includeSourceInSymbolFile": true
   },
-  "runtime": "9.0",
+  "runtime": "10.0",
   "features": [
     "NoImplicitWith",
     "TranslationFile",
